--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,66 @@
+@charset "UTF-8";
+
+article,
+aside,
+body,
+button,
+dd,
+dialog,
+dl,
+dt,
+fieldset,
+figure,
+footer,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+input,
+legend,
+li,
+main,
+nav,
+ol,
+p,
+section,
+select,
+table,
+td,
+textarea,
+textarea,
+th,
+ul {
+  margin: 0;
+  padding: 0;
+  white-space: pre-line;
+}
+
+
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+i {
+  font-style: normal;
+}
+
+a,
+a:active,
+a:focus,
+a:hover {
+  text-decoration: none;
+}
+
 body {
-  font-family: SUITE-Regular, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color: rgba(255, 255, 255, 0.87);
-
+  font-family: GowunBatang, NanumSquareR, NanumSquareNeo, Pretendard, system-ui, Helvetica, Arial, sans-serif;
+  line-height: 1.6;
+  color: rgba(255, 255, 255, 255);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -13,22 +69,71 @@ body {
 
   text-align: center;
   margin: 0 auto;
-  min-width: 280px;
+  padding: 0;
+  box-sizing: border-box;
+  min-width: 320px;
   display: flex;
   justify-content: center;
-  background-color: #E0E7D9;
+  background-color: #ffffff;
 }
 
-@font-face {
-  font-family: 'HSSanTokki20-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2405@1.0/HSSanTokki20-Regular.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
+ol,
+ul {
+  list-style: none;
 }
 
+button,
+input,
+select,
+textarea {
+  font-family: 'Pretendard', sans-serif; }
+
 @font-face {
-  font-family: 'SUITE-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2') format('woff2');
+  font-family: 'GowunBatang';
+  src: url('../src/assets/fonts/GowunBatang-Regular.ttf') format('truetype');
   font-weight: 400;
-  font-style: normal;
 }
+
+@font-face {
+  font-family: 'GowunBatang';
+  src: url('../src/assets/fonts/GowunBatang-Bold.ttf') format('truetype');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'NanumSquare';
+  src: url('../src/assets/fonts/NanumSquareL.ttf') format('truetype');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'NanumSquare';
+  src: url('../src/assets/fonts/NanumSquareR.ttf') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'NanumSquareNeo';
+  src: url('../src/assets/fonts/NanumSquareNeo-aLt.ttf') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'NanumSquareNeo';
+  src: url('../src/assets/fonts/NanumSquareNeo-bRg.ttf') format('truetype');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../src/assets/fonts/Pretendard-Thin.ttf') format('truetype');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../src/assets/fonts/Pretendard-Medium.ttf') format('truetype');
+  font-weight: 500;
+}
+
+
