--- a/src/index.css
+++ b/src/index.css
@@ -85,13 +85,22 @@ body {
   padding: 0;
   box-sizing: border-box;
   min-width: 320px;
-  display: flex;
-  justify-content: center;
+  width: 100%;
 }
 
 ol,
 ul {
   list-style: none;
+}
+
+.py-2 {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+
+.px-2 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 /* ko */
@@ -133,5 +142,17 @@ ul {
 @font-face {
   font-family: 'Pretendard', sans-serif;
   src: url('../src/assets/fonts/Pretendard-Regular.woff2') format('woff2');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Autography';
+  src: url('../src/assets/fonts/Autography.otf') format('opentype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'SometimesTimes';
+  src: url('../src/assets/fonts/SometimesTimes.ttf') format('truetype');
   font-weight: 400;
 }
