--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,16 @@ ul {
   -moz-osx-font-smoothing: grayscale;
 }
 
+div {
+  width: 100%;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+img {
+  width: 100%;
+}
+
 i {
   font-style: normal;
 }
@@ -79,13 +89,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  
   text-align: center;
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
   min-width: 320px;
   width: 100%;
+  font-size: .95rem;
+  color: #555;
 }
 
 ol,
